terraform/network.tf


resource "aws_security_group" "sales_sg" {
  name        = "sales-service-sg"
  description = "Allow HTTP inbound"

  ingress { 
	from_port   = 22
	to_port     = 22
	protocol    = "tcp"
	cidr_blocks = ["189.163.24.169/32"]
	}

	# Authorize HTTP access for the test script
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["189.163.24.169/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
